package ethanjones.cubes.block.blocks;

import ethanjones.cubes.block.Block;

public class BlockDirt extends Block {

    protected BlockDirt(String id) {
        super(id);
    }

    // dirt-specific overrides go here
}